# swiss_firm

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  platformio.ini  sdkconfig  sdkconfig.upesy_wroom
main/: CMakeLists.txt  adc_readings.c  adc_readings.h  config_example.h  main.c  publish.c  publish.h  storage.c  storage.h  test.c  test.h  types.h  utils.h  wifi.c  wifi.h
main/sensors/: anemometer.c  anemometer.h  bme680.c  bme680.h  ds18b20.c  ds18b20.h  guvas12sd.c  guvas12sd.h  raingauge.c  raingauge.h  si1145.c  si1145.h  wind_vane.c  wind_vane.h
src/: CMakeLists.txt  adc_readings.c  adc_readings.h  config_example.h  main.c  publish.c  publish.h  server_cert_example.pem  storage.h  utils.c  wifi.c  wifi.h
src/sensors/: anemometer.c  anemometer.h  bme680.c  bme680.h  ds18b20.c  ds18b20.h  raingauge.c  raingauge.h  wind_vane.c  wind_vane.h
